save space from screenshots

--- a/controlled_study.tex
+++ b/controlled_study.tex
@@ -219,20 +219,23 @@ Bangladesh) were recruited through online announcements posted on Twitter, Faceb
 
 \end{table}
 
-\begin{figure*}[t]
-\begin{center}
-\fbox{\includegraphics[width=\linewidth,height=2.5in,keepaspectratio]{original.png}}
-\end{center}
-\caption{Screenshot of the original WordPress REST API documentation}
-\label{fig:original}
-\end{figure*}
+\begin{figure*}[htp]
+\centering
 
-\begin{figure*}[tb]
-\begin{center}
-\fbox{\includegraphics[width=\linewidth,height=2.5in,keepaspectratio]{forked.png}}
-\end{center}
-\caption{Screenshot of the enhanced WordPress REST API documentation with a usage example}
+\begin{subfigure}[t]{4in}
+\centering
+\includegraphics[width=4in]{original.png}
+\caption{Original API Documentation}
+\label{fig:original}
+\end{subfigure}
+~
+\begin{subfigure}[t]{3in}
+\centering
+\includegraphics[width=2.7in]{forked.png}
+\caption{Usage Example from the Enhanced API Documentation}
 \label{fig:enhanced}
+\end{subfigure}
+\caption{Screenshots of Original vs. Enhanced API Documentation}
 \end{figure*}
 
 
