--- a/controlled_study.tex
+++ b/controlled_study.tex
@@ -232,7 +232,7 @@ Bangladesh) were recruited through online announcements posted on Twitter, Faceb
 \begin{subfigure}[t]{3in}
 \centering
 \includegraphics[width=2.7in]{forked.png}
-\caption{Enhanced API Documentation with Usage Example}
+\caption{API Documentation Enhanced with Usage Example}
 \label{fig:enhanced}
 \end{subfigure}
 \caption{Screenshots of Original vs. Enhanced API Documentation}
